# budgeting

./: .env  .gitignore  Cargo.toml  api-doc.json  build.rs  docker-compose.yml  gen-api.md  todo.md
.sqlx/: query-7894a91f7c371fcbba7a2389d42fe4b9e47dbd8a27eebf532bcbf279ce2ca656.json
budgeting-backend/: .env  Cargo.toml
budgeting-backend/.sqlx/: query-61b8dfecb7d50b7cf5acd88609b7f6e1d02d9b718fd141fb5f3f68d791513693.json  query-817f6b138e927105589dd350a2c69afbce1a14ee0fea76314d3e400494c7fe48.json  query-8332d167b27a172ee3b0f329da1c7adde73a5b2b8767abccf1af507878d102ed.json  query-8fde6b0a39c11bc297dfed8cc88aaa3c5ce711ef1627c03b4d1ce9faee134d76.json
budgeting-backend/migrations/: 202409021702_initial_models.sql  202409050655_transaction_time.sql  202409071429_transaction_date.sql  202409081946_user_bank_account.sql  202409132050_decimal_amounts.sql  202409272116_schedule.sql  202409280828_budget.sql  202410051746_transaction_budget_id.sql  202411241154_seed_user.sql  202411242012_user_pay_frequency.sql  202411272030_budget_assignment.sql  202411292100_budget_assignment_type.sql  202411301323_budget_assignment_link_id.sql
budgeting-backend/src/: bank_accounts.rs  db.rs  extensions.rs  lib.rs  main.rs  models.rs  payees.rs  routes.rs  transactions.rs  users.rs
budgeting-backend/src/db/: bank_accounts.rs  budgets.rs  payees.rs  schedule.rs  transactions.rs  users.rs
budgeting-backend/src/extensions/: decimal.rs  decimal_extensions.rs  once_lock.rs  once_lock_extensions.rs
budgeting-backend/src/routes/: bank_accounts.rs  budgets.rs  payees.rs  schedule.rs  transactions.rs  users.rs
budgeting-backend/tests/: bank_account_tests.rs  budget_tests.rs  payee_tests.rs  transaction_tests.rs  user_tests.rs
budgeting-backend/tests/common/: mod.rs
budgeting-ui/: eslint.config.js  package-lock.json  (+1 more)
(+55 files in other folders)
