[package]
name = "budgeting"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
dotenvy = "0.15.7"
serde = { version = "1.0.209", features = ["derive"] }
sqlx = { version = "0.8.1", features = ["mysql", "runtime-tokio", "uuid"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
