[package]
name = "budgeting-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["constructor"] }
dotenvy = "0.15.7"
email_address = "0.2.9"
http = "1.1.0"
rust_decimal = { version = "1.36.0", features = ["serde", "serde-with-float"] }
serde = { version = "1.0.209", features = ["derive"] }
sqlx = { version = "0.8.1", features = ["chrono", "mysql", "runtime-tokio", "rust_decimal", "uuid"] }
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono", "uuid", "decimal"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[build-dependencies]
fs_extra = "1.3.0"

[dev-dependencies]
axum-test = "15.7.1"
